--- a/src/components/ui/text-field/text-field.module.scss
+++ b/src/components/ui/text-field/text-field.module.scss
@@ -1,7 +1,7 @@
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
   -webkit-appearance: none;
 }
 
@@ -42,7 +42,6 @@ input[type="search"]::-webkit-search-results-decoration {
   &:hover {
     background: var(--color-dark-700);
   }
-
 
   &:disabled {
     border-color: var(--color-dark-300);
@@ -100,7 +99,7 @@ input[type="search"]::-webkit-search-results-decoration {
   transform: translateY(-50%);
 }
 
-input[type="search"] {
+input[type='search'] {
   appearance: none;
 }
 
@@ -112,7 +111,6 @@ input[type="search"] {
   right: 10px;
   transform: translateY(-50%);
 }
-
 
 .showPassword {
   top: 50%;
