--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -2,11 +2,12 @@
 
 .root {
   cursor: pointer;
-  white-space: nowrap;
-  height: em(36);
-  padding: 0 em(28);
+
+  height: 24px;
+  padding: 6px 28px;
 
   text-align: center;
+  white-space: nowrap;
 
   border: none;
   border-radius: 4px;
@@ -101,6 +102,8 @@
   }
 
   &FullWidth {
+    box-sizing: border-box;
     width: 100%;
+    height: 36px;
   }
 }
