--- a/src/components/ui/header/header.module.scss
+++ b/src/components/ui/header/header.module.scss
@@ -1,8 +1,16 @@
 .root {
+  z-index: 10;
+  top: 0;
+  right: 0;
+  left: 0;
+
   display: flex;
   justify-content: center;
+
   width: 100%;
-  border: 1px solid var(--color-light-100);
+
+  background-color: var(--color-dark-700);
+  border-bottom: 1px solid var(--color-dark-500);
 }
 
 .headerContainer {
@@ -12,7 +20,7 @@
   justify-content: space-between;
 
   width: 1280px;
-  height: 60px;
+  height: var(--header-height);
   padding: 12px 136px;
 }
 
