--- a/src/components/ui/text-field/text-field.module.scss
+++ b/src/components/ui/text-field/text-field.module.scss
@@ -2,7 +2,7 @@ input[type='search']::-webkit-search-decoration,
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-results-button,
 input[type='search']::-webkit-search-results-decoration {
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 .root {
@@ -11,14 +11,12 @@ input[type='search']::-webkit-search-results-decoration {
 
 .fieldContainer {
   position: relative;
-  width: 100%;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .field {
-  //display: inline-block;
-
   width: 100%;
   padding: 6px 22px 6px 12px;
 
@@ -83,20 +81,22 @@ input[type='search']::-webkit-search-results-decoration {
 
 .showPassword {
   position: absolute;
-  width: 15px;
-  height: 15px;
   top: 50%;
   right: 12px;
   transform: translateY(-50%);
+
+  width: 15px;
+  height: 15px;
 }
 
 .showSearch {
   position: absolute;
-  width: 15px;
-  height: 15px;
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+
+  width: 15px;
+  height: 15px;
 }
 
 input[type='search'] {
@@ -105,11 +105,13 @@ input[type='search'] {
 
 .closeIcon {
   cursor: pointer;
-  width: 10px;
+
   position: absolute;
   top: 50%;
   right: 10px;
   transform: translateY(-50%);
+
+  width: 10px;
 }
 
 .showPassword {
