feature: create rating

--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -3,8 +3,8 @@
 .root {
   cursor: pointer;
 
-  height: 24px;
-  padding: 6px 28px;
+  height: 36px;
+  padding: 0 28px;
 
   text-align: center;
   white-space: nowrap;
