--- a/src/components/ui/page/page.module.scss
+++ b/src/components/ui/page/page.module.scss
@@ -7,6 +7,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 1000px;
+
+    width: 80%;
+
+    border: 1px solid red;
   }
 }
