--- a/src/components/modal-components/add-new-deck/add-new-deck.module.scss
+++ b/src/components/modal-components/add-new-deck/add-new-deck.module.scss
@@ -1,7 +1,20 @@
 .container {
+  width: 100%;
   padding: 36px 24px 24px;
 
   .buttonMargin {
     margin: 36px 0 24px;
+  }
+
+  .imgContainerFile {
+    width: 500px;
+    height: 100px;
+    margin: 20px 0;
+  }
+
+  .imgFile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
