--- a/src/components/packs/pack-table/header-table/header-table.module.scss
+++ b/src/components/packs/pack-table/header-table/header-table.module.scss
@@ -1,8 +1,7 @@
 .columnHeaderContainer {
   user-select: none;
 
-  min-width: 200px;
-  width: 100%;
+  width: 50%;
   height: 36px;
   padding-left: 24px;
 
@@ -22,4 +21,9 @@
     align-items: center;
     justify-content: center;
   }
+}
+
+.tr {
+  width: 200px;
+  border: 1px solid red;
 }
