--- a/src/components/packs/pack-table/pack-table.module.scss
+++ b/src/components/packs/pack-table/pack-table.module.scss
@@ -1,10 +1,11 @@
 .container {
+  width: 100%;
   padding: 36px 0 0;
 
   .table {
     overflow-x: auto;
     border-collapse: collapse;
-    width: auto;
+    width: 100%;
     border: 1px solid var(--color-dark-500);
   }
 
