--- a/src/components/ui/header/header.module.scss
+++ b/src/components/ui/header/header.module.scss
@@ -5,6 +5,7 @@
   left: 0;
 
   display: flex;
+  align-items: center;
   justify-content: center;
 
   width: 100%;
@@ -19,9 +20,9 @@
   align-items: center;
   justify-content: space-between;
 
-  width: 1280px;
+  width: 80%;
   height: var(--header-height);
-  padding: 12px 136px;
+  padding: 12px 0;
 }
 
 .user {
