--- a/src/pages/decks/empty-decks/empty-dack.module.scss
+++ b/src/pages/decks/empty-decks/empty-dack.module.scss
@@ -2,10 +2,6 @@
   width: 100%;
   padding: 0 8.5rem;
 
-  .namePack {
-    margin-bottom: 4.312rem;
-  }
-
   .textWrapper {
     display: flex;
     flex-direction: column;
@@ -22,4 +18,8 @@
     align-items: center;
     justify-content: center;
   }
+}
+
+.namePack {
+  margin: 26px 136px;
 }
