--- a/src/pages/decks/friends-pack-page/friends-pack.module.scss
+++ b/src/pages/decks/friends-pack-page/friends-pack.module.scss
@@ -3,4 +3,11 @@
   justify-content: space-between;
   width: 100%;
   margin-bottom: 14px;
+
+  .dropdownSection {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+  }
 }
