--- a/src/components/modal-components/modal/modal.module.scss
+++ b/src/components/modal-components/modal/modal.module.scss
@@ -1,94 +1,67 @@
-/* reset */
-button,
-fieldset,
-input {
-  all: unset;
-}
-
-.DialogOverlay {
+.overlay {
   position: fixed;
+  z-index: 0;
   inset: 0;
-  background-color: rgb(0 0 0 / 75%);
-  animation: overlayShow 1000ms cubic-bezier(0.16, 1, 0.3, 1);
+  background-color: rgb(0 0 0 / 70%);
 }
 
-.DialogContent {
+.dialogContent {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
   width: 90vw;
-  max-width: 550px;
-  max-height: 100vh;
 
-  background-color: var(--color-dark-700);
-  border: 1px solid var(--color-dark-300);
-  border-radius: 4px;
-  box-shadow:
-    hsl(206deg 22% 7% / 35%) 0 10px 38px -10px,
-    hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
+  background-color: transparent;
 
-  animation: contentShow 1000ms cubic-bezier(0.16, 1, 0.3, 1);
-}
-
-.DialogContent:focus {
-  outline: none;
-}
-
-.DialogDescription {
-  margin: 10px 0 20px;
-  font-size: 15px;
-  line-height: 1.5;
-  color: black;
-}
-
-.IconButton {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 25px;
-  height: 25px;
-
-  font-family: inherit;
-  color: var(--color-light-100);
-
-  border-radius: 100%;
-}
-
-.IconButton:hover {
-  background-color: var(--color-dark-500);
-}
-
-.IconButton:focus {
-  box-shadow: 0 0 0 2px var(--color-accent-900);
-}
-
-.underLine {
-  border-bottom: 1px solid var(--color-dark-300);
-}
-
-// noinspection Stylelint
-@keyframes overlayShow {
-  from {
-    opacity: 0;
+  &:focus {
+    outline: none;
   }
 
-  to {
-    opacity: 1;
-  }
-}
+  .modal {
+    position: fixed;
+    z-index: 101;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-// noinspection Stylelint
-@keyframes contentShow {
-  from {
-    transform: translate(-50%, -48%) scale(0.96);
-    opacity: 0;
-  }
+    min-width: 33.25rem;
+    min-height: 3.75rem;
 
-  to {
-    transform: translate(-50%, -50%) scale(1);
-    opacity: 1;
+    color: #fff;
+
+    background-color: var(--color-dark-700);
+    border: 1px solid var(--color-dark-500);
+    border-radius: 2px;
+
+    .titleWrapper {
+      display: flex;
+      justify-content: space-between;
+      padding: 18px 24px;
+
+      border-bottom: 1px solid var(--color-dark-500);
+
+      .dialogTitle {
+        all: unset;
+
+        .title {
+          color: var(--color-light-100);
+        }
+      }
+
+      .closeMark {
+        cursor: pointer;
+        width: 24px;
+        height: 24px;
+      }
+    }
+
+    .modalContent {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+      padding: 18px 24px 24px;
+    }
   }
 }
